--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>XO</title>
     </head>
     <body>
+        <h1>test</h1>
         <div class="counter">   
         </div>
         <div class="game">
@@ -28,4 +29,5 @@
         </div>
         <script src="main.js"></script>
     </body>
+
 </html>
